# todo_fm

./: .gitignore  conftest.py  hello.py  pyproject.toml  report.html  ruff.toml
src/: task.py  task_list.py
tests/: test_create_task.py  test_has_tag.py  test_is_overdue.py  test_mark_completed.py  test_normalize_priority.py  test_postpone.py  test_remove_tag.py  test_time_left.py  test_unique_tags.py  test_validate_description.py  test_validate_due_date.py
tests/task/: test_add_tag.py  test_is_overdue.py  test_normalize_priority.py  test_normalize_status.py  test_postpone.py  test_remove_overdue.py  test_remove_tag.py  test_unique_tags.py  test_validate_description.py  test_validate_due_date.py
tests/task_list/: test_add_task.py  test_create_task_list.py  test_filter_by.py  test_filter_by_tag.py  test_get_by_id.py  test_remove_completed.py  test_remove_task.py  test_sort_by.py  test_validate_task_type.py
