[project]
name = "todo-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-html>=4.1.1",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.9",
]
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
plugins = []
follow_imports = "normal"
ignore_missing_imports = false
