[project]
name = "todo-fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.3.0",
    "pytest-html>=4.1.1",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.15.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.9",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
plugins = []
follow_imports = "normal"
ignore_missing_imports = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --strict-markers
    --disable-warnings
    --maxfail=3
    --cov-report=term-missing
    --cov-fail-under=100
    --cov=src
    --cov-report=xml
    --cov-report=html
"""
testpaths = [
    "tests",
]

markers = [
    "slow: for slow tests",
    "integration: for integration tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
]
